--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@
 }
 
 .banner {
-  background-image: url('img/banner4.jpg');
+  background-image: url('banner4.jpg');
   background-size: cover;
   height: 550px;
   width: 100%;
